fix home page prizeboard single button float align left desktop

--- a/sites/all/themes/custom/dfc/sass/components/_hp-prizeboard.scss
+++ b/sites/all/themes/custom/dfc/sass/components/_hp-prizeboard.scss
@@ -66,20 +66,9 @@
         @include rem(font-size, 14px);
         padding: 15px 0;
       
-        &:first-child {
-
-          @include breakpoint($bp-full) {
-            float: left;
-            width: 48%;
-          }
-        }
-
-        &:last-child {
-
-          @include breakpoint($bp-full) {
-            float: right;
-            width: 48%;
-          }
+        @include breakpoint($bp-full) {
+          float: left;
+          width: 48%;
         }
       }
     }
